# Streaming-and-processing-CPU-and-RAM-usage

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/utils/: __init__.py  db_operations.py
avro/: schema.avsc
flink/: needed_jar_urls.txt  process_stream.py
flink/sql/: kafka_ddl.sql  postgres_ddl.sql  sink_insert.sql
measurement_spammer/: spam_measurements.py
measurement_spammer/utils/: kafka_helpers.py  readings.py
timescale/: init.sql
