[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
confluent-kafka = "^2.3.0"
apache-flink = "1.18.1"
fastavro = "^1.9.4"
requests = "^2.31.0"
duckdb = "^0.10.2"
streamlit = "^1.34.0"
psutil = "^5.9.8"
click = "^8.1.7"
pandas = "~2"


[tool.poetry.group.dev.dependencies]
types-confluent-kafka = "^1.2.1"
types-psutil = "^5.9.5.20240423"
pandas-stubs = "~2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
